feat: update production config for deployment
- Fix frontend API URL to use server IP
- Add DATABASE_URL environment variable
- Update docker-compose.yml with production settings
- Remove hardcoded localhost URLs

--- a/.gitignore
+++ b/.gitignore
@@ -165,4 +165,6 @@ site/
 
 # ====================== other
 struktur_project.txt
-peninemate_plain_dump.sql
+peninemate_plain_dump.sql.env
+.env.local
+frontend/.env.local
