--- a/.gitignore
+++ b/.gitignore
@@ -165,6 +165,6 @@ site/
 
 # ====================== other
 struktur_project.txt
-peninemate_plain_dump.sql.env
+peninemate_plain_dump.sql.
 .env.local
 frontend/.env.local
